--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,25 @@ Exemplo Generics/__history/uGenerics.dfm.~2~
 Exemplo Generics/__history/uGenerics.dfm.~1~
 Exemplo Generics/__history/PrjGenerics.dpr.~1~
 Exemplo Generics/Win32/Debug/PrjGenerics.exe
+Exemplo MVC com ORMBr/__history/PrjMVCORMBR.dpr.~2~
+Exemplo MVC com ORMBr/__history/PrjMVCORMBR.dpr.~1~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.dfm.~1~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.dfm.~2~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.dfm.~3~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.Interfaces.pas.~1~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.Interfaces.pas.~2~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.Interfaces.pas.~3~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.Interfaces.pas.~4~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.Interfaces.pas.~5~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.Interfaces.pas.~6~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.pas.~10~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.pas.~11~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.pas.~2~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.pas.~3~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.pas.~4~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.pas.~5~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.pas.~6~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.pas.~7~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.pas.~8~
+Exemplo MVC com ORMBr/Model/Conexao/__history/Model.Conexao.pas.~9~
+Exemplo MVC com ORMBr/View/__history/frmView.Principal.pas.~1~
